[package]
name = "genpass"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
#argh = "0.1.12"
# https://github.com/google/argh/pull/53
argh = { path = "../arghish/argh" }
iwrtb = { path = "../iwrtb/iwrtb" }
