[package]
name = "iwgenpass"
edition = "2021"
version = "1.0.0"
authors = ["Ish West <optimistcli@yahoo.com>"]
description = "Generates random password(s). Default is 16 chars of capital, lowercase letters and digits."
documentation = "https://github.com/optimistiCli/rgenpass/blob/main/README.md"
repository = "https://github.com/optimistiCli/rgenpass"
categories = ["command-line-utilities"]

[[bin]]
name = "genpass"
path = "src/main.rs"

[dependencies]
rand = "0.8.5"
iwrtb = { path = "../iwrtb/iwrtb" }
clap = { version = "4.5.23", features = ["cargo"] }
clap-cargo = "0.14.1"
